# vigilant-driving

./: .gitignore  README.md  hubconf.py  main.py  requirements.txt  tools.txt  tools.yml  train_pred.txt
arm64/: .gitignore  CMakeLists.txt  arm64.py  fusion.py  main.cpp  models.py  models.sh
arm64/Camera/: CMakeLists.txt  models.cc  models.h
arm64/include/: camera.h
arm64/src/: camera.cpp  main.cpp
arm64/test/: CMakeCache.txt  Makefile  cmake_install.cmake
common/: device.py  run.py
depth/: dataset.py  main.py  network.py  visual.py
etc/: 4wk7ls.gif:Zone.Identifier  4wk7m4.gif:Zone.Identifier  4wk857.gif:Zone.Identifier
mobile/: settings.gradle
mobile/app/: build.gradle
mobile/app/src/androidTest/java/com/example/vigilant/: ExampleInstrumentedTest.kt
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/example/vigilant/: MainActivity.kt  Visuals.kt
mobile/app/src/main/res/layout/: activity_main.xml  visuals.xml
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/app/src/main/res/values-night/: themes.xml
mobile/app/src/test/java/com/example/vigilant/: ExampleUnitTest.kt
mobile/gradle/wrapper/: gradle-wrapper.properties
segnet/: dataset.py  main.py  network.py  train.py
segnet_V2/: dataset.py  main.py  network.py
speed/: main.py  maind.py  network.py  test_pred.txt  train.py
